Fixed button alignment

--- a/files/main.css
+++ b/files/main.css
@@ -515,7 +515,7 @@ border-left: 0px solid black;
 border-right: 0px solid black;
 margin-top: 25px;
 margin-bottom: 10px;
-table-layout: auto;
+table-layout: fixed;
 }
 
 .print {
@@ -544,7 +544,6 @@ table-layout: auto;
   font-style: normal;
   font-size: 12pt;
   padding-left: 5px;
-  font-size: 10pt;
 }
 
 .email {
@@ -573,7 +572,6 @@ table-layout: auto;
   font-style: normal;
   font-size: 12pt;
   padding-left: 5px;
-  font-size: 10pt;
 }
 
 <!-- /* Buttons */ -->
